--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,7 @@
 @import "blocks/registration.scss";
 @import "blocks/location.scss";
 @import "blocks/footer.scss";
+@import "blocks/tariffs.scss";
 @import "blocks/user-info.scss";
 @import "blocks/plans.scss";
 @import "blocks/plan.scss";
@@ -48,3 +49,8 @@
 @import "blocks/route.scss";
 @import "blocks/select-country.scss";
 @import "blocks/recreation.scss";
+@import "blocks/filter.scss";
+@import "blocks/companion-filter.scss";
+@import "blocks/companions-list.scss";
+@import "blocks/card.scss";
+@import "blocks/pagination.scss";
