--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -149,6 +149,9 @@ $radius: 30px;
   }
 
   @media #{$tablet} {
+    position: relative;
+    z-index: 1;
+
     margin: 0 0 41px;
 
     font-size: 28px;
@@ -182,6 +185,7 @@ $radius: 30px;
   &::before {
     content: "";
     position: absolute;
+    z-index: -1;
     top: 0;
     left: 0;
 
@@ -239,7 +243,7 @@ $radius: 30px;
         position: absolute;
         top: -96px;
         left: -34px;
-        z-index: -1;
+        z-index: -2;
 
         @include companion-back-boy;
       }
