--- a/source/sass/blocks/placement.scss
+++ b/source/sass/blocks/placement.scss
@@ -266,9 +266,20 @@ $max-width-price: 130px;
   line-height: 16px;
   color: $dark-blue-200;
 
+  transition: all $transition-duration;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media #{$tablet} {
-    display: flex;
+    display: inline-flex;
     align-items: center;
+    padding: 0 20px 0 0;
 
     font-size: 20px;
     line-height: 20px;
