--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -35,15 +35,16 @@
     &::after {
       content: "";
       position: absolute;
-      width: 100%;
-      height: 750px;
       bottom: 0;
       left: 0;
       z-index: -2;
+
+      width: 100%;
+      height: 750px;
+
       background-image: url("../img/globe-back_desktop.jpg");
       background-repeat: no-repeat;
       background-size: cover;
-
       border-radius: 0 0 60px 60px;
 
       @media (min-resolution: 2dppx) {
@@ -157,6 +158,8 @@
 
   border-radius: 50%;
 
+  transition: all $transition-duration;
+
   &::before {
     content: "";
     position: absolute;
@@ -167,6 +170,14 @@
     transform: translate(-50%, -50%);
   }
 
+  &:active {
+    &::before {
+      opacity: 0.3;
+
+      transition: all $transition-duration;
+    }
+  }
+
   &--tel {
     background-color: $orange-700;
 
@@ -175,6 +186,10 @@
       height: 18px;
 
       background-image: url("../img/icon-telephone-2.svg");
+    }
+
+    &:hover {
+      background-color: $orange-800;
     }
   }
 
@@ -188,14 +203,28 @@
       background-image: url("../img/icon-mail-2.svg");
       background-size: cover;
     }
+
+    &:hover {
+      background-color: $orange-700;
+    }
   }
 }
 
 .promo__authorization-button {
   z-index: 2;
-  width: initial;
 
   flex-grow: 1;
+  width: initial;
+
+  transition: all $transition-duration;
+
+  &:hover {
+    background-color: $orange-450;
+  }
+
+  &:active {
+    color: rgba($dark-blue-400, 0.3);
+  }
 
   @media #{$mobile-tablet} {
     flex-grow: 0;
@@ -213,7 +242,6 @@
 
 .promo__blockquote {
   max-width: 65%;
-  // min-height: 150px;
   margin: 0 0 29px 25px;
 
   font-size: 16px;
